# scramp

./: .gitattributes  .gitignore  .travis.yml  MANIFEST.in  README.adoc  README.md  README.rst  pyproject.toml  setup.cfg  setup.py  tox.ini
.github/workflows/: test.yml
scramp/: __init__.py  _version.py  core.py
test/: test_import_all.py  test_readme.py  test_scramp.py
tests/: test_scramp.py
