[metadata]
name = scramp
author = Contributors
description = An implementation of the SCRAM protocol.
long_description = Scramp
    ------
    A pure-Python implementation of the SCRAM authentication protocol.
url = https://github.com/tlocke/scramp
license =  MIT
classifiers =
    Development Status :: 5 - Production/Stable
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: Implementation
    Programming Language :: Python :: Implementation :: CPython
    Programming Language :: Python :: Implementation :: PyPy
    Operating System :: OS Independent
    Topic :: Software Development :: Libraries :: Python Modules
keywords = SCRAM authentication SASL

[options]
python_requires = >=3.7
install_requires =
    asn1crypto >= 1.4.0
    importlib-metadata >= 1.0 ; python_version < "3.8"
packages = scramp


[flake8]
application-names = scramp
ignore = E203,W503
max-line-length = 88
exclude = .git,__pycache__,build,dist,venv,.tox
application-import-names = scramp
